# MLOps_course_AGH_LAB01_HOMEWORK

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  test_app.http
tests/: test_inference.py  test_input.py  test_model.py  test_response.py
