[project]
name = "mlops-course-agh-lab01-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.7.1",
    "fastapi<0.116",
    "inference>=0.26.1",
    "joblib>=1.5.3",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "scikit-learn==1.7.2",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
